initialize churn project structure

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+# data
+data/
+*.csv
+*.parquet
+*.xlsx
+
 # Distribution / packaging
 .Python
 build/
@@ -25,6 +31,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
+# env / secrets
+.env
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
